appId: com.zaimimran.almari
---
- launchApp:
    permissions:
      all: allow
- extendedWaitUntil:
    visible: "Looks"
    timeout: 30000
- tapOn: "Looks"
- tapOn: "Office navy.*"
- extendedWaitUntil:
    visible: "Change"
    timeout: 10000
- tapOn: "Change"
- extendedWaitUntil:
    visible: "Edit your look"
    timeout: 20000
